<?xml version="1.0"?>
<package format="3">
  <name>peg_detector</name>
  <version>0.0.1</version>
  <description>Shape-based peg detector using RealSense RGB-D camera</description>
  <maintainer email="cobot@todo.todo">cobot</maintainer>
  <license>MIT</license>

  <!-- Runtime and build dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>numpy</depend>
  <depend>opencv-python</depend>

  <!-- Optional testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
